Changed minor style issues on mobile and added adsense

--- a/css/medias.less
+++ b/css/medias.less
@@ -17,7 +17,8 @@
     }
 
     h2 {
-        margin-top: 2em;
+        margin-top: 1em;
+        margin-bottom: 1em !important;
         font-size: 2.5em !important;
     }
 
